login_registration_trending added, now refactor

--- a/urly/templates/urlyapp/index.html
+++ b/urly/templates/urlyapp/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
   <h1>Urly-Bird</h1>
+
+  <a href='' id='login_link'>Log In</a>
+  <a href='' id='registration_link'>Register</a>
+
+  <div id='trending'>
+    Trending links:
+  </div>
 </body>
 </html>
