added bookmark view

--- a/urly/templates/urlyapp/index.html
+++ b/urly/templates/urlyapp/index.html
@@ -12,6 +12,7 @@
 
   <div id='trending'>
     Trending links:
+    <a href='{% url 'urly:bookmark' pk=1 %}' class='bookmark'>{{bookmark.title}}</a>
   </div>
 </body>
 </html>
