--- a/urly/templates/urlyapp/index.html
+++ b/urly/templates/urlyapp/index.html
@@ -12,7 +12,9 @@
 
   <div id='trending'>
     Trending links:
-    <a href='{% url 'urly:bookmark' pk=1 %}' class='bookmark'>{{bookmark.title}}</a>
+    {% for bookmark in bookmarks %}
+    <a href='{% url 'urly:bookmark' pk=bookmark.pk %}' class='bookmark' id='{{bookmark.title}}'>{{bookmark.title}}</a>
+    {% endfor %}
   </div>
 </body>
 </html>
