--- a/urly/templates/urlyapp/bookmark.html
+++ b/urly/templates/urlyapp/bookmark.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-  <h1>{{bookmark.title}}</h1>
+  <h1>{{ bookmark.title }}</h1>
 
-  Absolute Url: <div id='url'>{{bookmark.url}}</div>
+  Absolute Url: <div id='url'>{{ bookmark.url }}</div>
 
   <div>
-    Url added by: <a href='{% url 'urly:profile' profile.pk %}'
-                     class='profile'>{{profile.username}}</a>
+    Url added by: <a href='{% url 'urlyapp:profile' profile.pk %}'
+                     class='profile'>{{ profile.username }}</a>
   </div>
 
 </body>
