--- a/urly/templates/urlyapp/nav.html
+++ b/urly/templates/urlyapp/nav.html
@@ -27,7 +27,7 @@
 
       {% if user.is_authenticated %}
       <li><a href='' id='profile'>Your Profile</a></li>
-      <li><a href='' id='logout'>Logout</a></li>
+      <li><a href='{% url 'accounts:logout' %}' id='logout'>Logout</a></li>
       {% else %}
       <li><a href='{% url 'accounts:login' %}' id='login'>Log In</a></li>
       {% endif %}
