--- a/urly/templates/urlyapp/profile.html
+++ b/urly/templates/urlyapp/profile.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-
-
 {% extends 'urlyapp/nav.html' %}
+
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 {% block content %}
 
