--- a/urly/templates/urlyapp/auth-profile.html
+++ b/urly/templates/urlyapp/auth-profile.html
@@ -8,6 +8,19 @@
 {% block content %}
 
   <h1 id='username'>{{ profile.username }}</h1>
+  <h3>Bookmarks:</h3>
+
+  <hr>
+  <div class='container'>
+    <div class='col-sm-3'>
+    </div>
+    <div class='col-sm-1'>
+      <form method='get' action='{% url 'urlyapp:bookmark-create' %}'>
+        {% csrf_token %}
+        <button type='submit' class='new-bookmark'><span class='glyphicon glyphicon-plus'></span></button>
+      </form>
+    </div>
+  </div>
 
   <div id='bookmarks' class='container'>
     {% for bookmark in bookmarks %}
@@ -15,7 +28,9 @@
     <div class='container-fluid'>
       <div>
         <div class='col-sm-3'>
-          <a href='{% url 'urlyapp:bookmark' pk=bookmark.pk %}'>{{ bookmark.title }}</a>
+          <a href='{% url 'urlyapp:hashid' hashid=bookmark.short %}'>{{ bookmark.title }}</a>
+          <form method='get' action = '{% url 'urlyapp:bookmark' pk=bookmark.pk %}'>
+          <button value='submit'><span class='glyphicon glyphicon-eye-open'></span></button>
         </div>
         <div class='col-sm-3'>
           <form method='get' action='{% url 'urlyapp:bookmark-edit' pk=bookmark.pk %}'>
@@ -24,10 +39,10 @@
           </form>
         </div>
 
-        <div class ='col-sm-3'>
-          <form method='get' action='{% url 'urlyapp:edit-tags' pk=bookmark.pk %}'>
+        <div class ='col-sm-2'>
+          <form method='get' action='{% url 'urlyapp:tags-edit' pk=bookmark.pk %}'>
             {% csrf_token %}
-            <button class='edit-tags' id='{{bookmark.id}}'>Edit tags</button>
+            <button type='submit' class='tags-edit' id='{{bookmark.id}}'>Edit tags</button>
           </form>
         </div>
 
@@ -42,7 +57,8 @@
       {% endfor %}
 
     {% endfor %}
+    {% bootstrap_pagination bookmarks %}
   </div>
-  # create bookmark
+
 
 {% endblock %}
