--- a/urly/templates/urlyapp/bookmark.html
+++ b/urly/templates/urlyapp/bookmark.html
@@ -15,7 +15,8 @@
                      class='profile'>{{ profile.username }}</a>
   </div>
 
-  <div>
+  <div id='chart'>
+    <h3>Cumulative Clicks by Day Since Posting</h3>
     <canvas id="myChart" width="500" height="400"></canvas>
   </div>
   <script>
