--- a/urly/templates/urlyapp/bookmark-trending.html
+++ b/urly/templates/urlyapp/bookmark-trending.html
@@ -5,19 +5,22 @@
 {% load bootstrap3 %}
 
 <h1>Trending Bookmarks</h1>
-{% for bm in object_list %}
-<hr>
-<div class='container'>
+
+<div class='container-fluid'>
+  <hr>
+  {% for bm in object_list %}
+
   <div class='col-sm-3'>
     <a href='{% url 'urlyapp:hashid' hashid=bm.short %}'>{{ bm.title }}</a>
   </div>
-  <div class ='col-sm-1'>
+  <div class ='col-sm-3'>
     <form method='get' action = '{% url 'urlyapp:bookmark' pk=bm.pk %}'>
       <button value='submit'><span class='glyphicon glyphicon-eye-open'></span></button>
     </form>
   </div>
+  {% endfor %}
 </div>
-{% endfor %}
+<hr>
 {% bootstrap_pagination page_obj %}
 
 {% endblock %}
