--- a/urly/templates/urlyapp/nav.html
+++ b/urly/templates/urlyapp/nav.html
@@ -24,7 +24,7 @@
       <li><a href='{% url 'urlyapp:home' %}' id='home'>Home</a></li>
       <li><a href='' id='profiles'>Profiles</a></li>
       <li><a href='{% url 'urlyapp:bookmark-trending' %}' id='bookmarks'>Trending Bookmarks</a></li>
-      <li><a href='' id='tags'>Tags</a></li>
+      <li><a href='{% url 'urlyapp:all-tags' %}' id='tags'>Tags</a></li>
 
       {% if user.is_authenticated %}
       <li><a href='{% url 'urlyapp:auth-profile' %}' id='profile'>Your Profile</a></li>
