--- a/urly/templates/urlyapp/tag.html
+++ b/urly/templates/urlyapp/tag.html
@@ -2,17 +2,26 @@
 
 {% extends 'urlyapp/nav.html' %}
 
-{% block content %}
+{% load bootstrap3 %}
 
+{% block content %}
+<style> .bookmark { color:green } </style>
 <h1 id='{{tag.name}}'>{{ tag.name }}</h1>
 
-<div id='bookmarks'>
+<div id='bookmarks' class='container-fluid'>
+<hr>
   {% for bookmark in bookmarks %}
-  <div class='col-sm-3'>
-    <a href='{% url 'urlyapp:bookmark' pk=bookmark.pk %}' class='bookmark' id={{bookmark.title}}>{{ bookmark.title }}</a>
-    Created by: <a herf='{% url 'urlyapp:profile' pk=bookmark.profile.pk %}' class='profile' id='{{ bookmark.profile.username }}'>{{ bookmark.profile.username }}</a>
+  <div class='col-sm-6'>
+    <div>
+      <a href='{% url 'urlyapp:bookmark' pk=bookmark.pk %}' class='bookmark' id={{bookmark.title}}>{{ bookmark.title }}</a>
+    </div>
+    <div>
+      Created by: <a herf='{% url 'urlyapp:profile' pk=bookmark.profile.pk %}' class='profile' id='{{ bookmark.profile.username }}'>{{ bookmark.profile.username }}</a>
+    </div>
   </div>
   {% endfor %}
 </div>
+<hr>
+{% bootstrap_pagination bookmarks %}
 
 {% endblock %}
